# python_web_hw5

./: main.py  pyproject.toml
storage/: data.json
